[tool.poetry]
name = "siwe_fastapi"
version = "0.1.0"
description = "Sign In With Ethereum + FastAPI"
authors = ["peloriante <peloriante@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
itsdangerous = "^2.1.2"
protobuf = "3.20^"
siwe = "^1.0.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
